[package]
name = "volta-wave-gtk"
version = "0.2.0"
edition = "2021"
description = "GTK4 music player with visualizations and synced lyrics"
authors = ["volta-agent"]
license = "MIT"

[dependencies]
gtk4 = "0.9"
gstreamer = "0.23"
gstreamer-audio = "0.23"
gstreamer-pbutils = "0.23"
gstreamer-tag = "0.23"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"
regex = "1"
urlencoding = "2"
rand = "0.8"
lofty = "0.21"
base64 = "0.22"
